# LoopForest

./: .gitignore  CycleRepForest.ipynb  LICENSE  LoopForest.py  PersistenceForest.py  README.md  benchmark.py  color_scheme.py  cycle_rep_vectorisations.py  forest_landscapes.py  forest_plotting.py  paper-examples.ipy  paper-examples.py  pers_forest_example.py  point_cloud_generator.py  point_cloud_sampling.py  pyproject.toml  signed_chain_example.csv
benchmarks/: benchmark_2d_lin_max-200000_10steps_10reps.csv  benchmark_2d_log_max-200000_20steps_10reps.csv  benchmark_3d_lin_max-50000_10steps_10reps.csv  benchmark_3d_log_max-50000_20steps_10reps.csv
examples/: 3d_PersForest_Example.ipynb  CycleRepForest.ipynb  animation_tutorial.ipynb  benchmark.py  paper-examples.ipy  pers_forest_example.py  point_cloud_generator.py
loopforest/: LoopForest.py  PersistenceForest.py  __init__.py  color_scheme.py  cycle_rep_vectorisations.py  forest_landscapes.py  forest_plotting.py  interior_activity_plotting.py  simplicial_filtration_plotting.py
point_cloud_csvs/: circle_with_connected_inner_islands.csv  line_in_circle_original.csv  signed_chain_example.csv
