[project]
name = "loopforest"
version = "0.1.0"
description = ""
authors = [
    {name = "Leon Renkin",email = "leon.renkin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "gudhi (>=3.11.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
